- image alignment fix

--- a/web/app/themes/Foody/resources/sass/common/_content.scss
+++ b/web/app/themes/Foody/resources/sass/common/_content.scss
@@ -49,6 +49,7 @@
     }
 
     &.aligncenter{
+      text-align: center;
       .wp-caption-text {
         text-align: center;
       }
